<resources>
    <string name="app_name">appquarium</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="pas_encore_membre">Pas encore membre ?</string>
    <string name="mail">Mail</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="adresse">Adresse</string>
    <string name="pays">Pays</string>
    <string name="pseudo">Pseudo</string>
    <string name="s_enregister">S\'enregister</string>
    <string name="longueur">Longueur</string>
    <string name="largeur">Largeur</string>
    <string name="hauteur">Hauteur</string>
    <string name="volume">Volume</string>
    <string name="title_activity_aquarium">Mon aquarium</string>
    <string name="title_poissons">Poissons</string>
    <string name="title_crustaces">Crustacés</string>
    <string name="title_plantes">Plantes</string>
    <string name="title_tests">Tests</string>
</resources>
